# libultraship

./: .gitignore  .gitmodules  CMakeLists.txt  mk_vs_sln.bat
.github/workflows/: apt-deps.txt  brew-deps.txt  build-validation.yml  test-validation.yml  tidy-format-validation.yml
cmake/: SetupTccRuntime.cmake
cmake/dependencies/: common.cmake  emscripten.cmake  switch.cmake  windows-vcpkg.cmake
include/fast/: Fast3dGui.h  Fast3dWindow.h  interpreter.h  lus_gbi.h
include/fast/backends/: gfx_direct3d_common.h  gfx_metal.h  gfx_opengl.h  gfx_rendering_api.h  gfx_vulkan.h
include/libultraship/: libultra.h  libultraship.h
include/libultraship/libultra/: controller.h  eeprom.h  gbi-otr.h  gbi.h  gbpak.h  gu.h  message.h  motor.h  os.h  rcp.h  time.h
include/ship/scripting/: ScriptLoader.h
include/ship/window/gui/: Gui.h  ShaderSettingsWindow.h
src/: CMakeLists.txt  Context.cpp  install_config.h
src/audio/: AudioPlayer.h  SDLAudioPlayer.cpp  WasapiAudioPlayer.cpp
src/config/: Config.cpp
src/controller/: ControlDeck.cpp  Controller.h  TASController.cpp
src/controller/controldevice/controller/mapping/factories/: RumbleMappingFactory.cpp
src/controller/controldevice/controller/mapping/sdl/: SDLMapping.cpp
src/core/: Window.cpp  Window.h
src/debug/: CrashHandler.cpp
src/engine/: SDKContext.h
src/engine/libultra/: DPC.h  MEM.h  UltraContext.cpp  UltraContext.h  VI.h
src/fast/: Fast3dGui.cpp  Fast3dWindow.cpp  interpreter.cpp
src/fast/backends/: gfx_direct3d11.cpp  gfx_dxgi.cpp  gfx_metal.cpp  gfx_metal_shader.cpp  gfx_opengl.cpp  gfx_sdl2.cpp  gfx_vulkan.cpp
src/fast/shaders/directx/: default.shader.hlsl  srgb.shader.hlsl
src/fast/shaders/metal/: default.shader.metal  srgb.shader.metal
src/fast/shaders/opengl/: default.shader.glsl  srgb.shader.glsl
src/fast/shaders/opengl/include/: fast3d_vs.glsli  filter.glsli  noise.glsli  palette.glsli
src/fast/shaders/vulkan/: default.shader.glsl  srgb.shader.glsl
src/fast/shaders/vulkan/include/: common.glsli  fast3d_vs.glsli  palette.glsli
src/graphic/Fast3D/: f3dex.h  gfx_bgfx.cpp  gfx_bgfx.h  gfx_cc.cpp  gfx_cc.h  gfx_direct3d_common.cpp  gfx_dxgi.cpp  gfx_metal.cpp  gfx_metal_shader.cpp  gfx_opengl.cpp  gfx_pc.cpp  gfx_pc.h  gfx_rendering_api.h  gfx_sdl2.cpp  interpreter.cpp  lus_gbi.h
src/graphic/RT64/: RT64Window.cpp  RT64Window.h
src/menu/: ImGuiImpl.cpp  ImGuiImpl.h
src/misc/: Hooks.h
src/public/bridge/: resourcebridge.cpp  windowbridge.cpp  windowbridge.h
src/public/libultra/: os.cpp  os_ai.cpp  os_controller.cpp  os_count.cpp  os_dp.cpp  os_eeprom.cpp  os_error.cpp  os_fpccsr.cpp  os_gbpak.cpp  os_init.cpp  os_interrupt.cpp  os_mesg.cpp  os_motor.cpp  os_pfspak.cpp  os_pi.cpp  os_sp.cpp  os_thread.cpp  os_timer.cpp  os_vi.cpp  os_vm.cpp
src/resource/: Archive.cpp  ResourceLoader.cpp  ResourceManager.cpp  ResourceType.h
src/resource/archive/: OtrArchive.cpp
src/resource/factory/: LightFactory.cpp  LightFactory.h  VertexFactory.cpp
src/resource/factory/SoH/: TextureFactory.cpp
src/resource/type/: Light.cpp  Light.h
src/resource/types/: Texture.cpp  Texture.h
src/ship/: Context.cpp
src/ship/scripting/: ScriptLoader.cpp
src/ship/window/gui/: Gui.cpp  ShaderSettingsWindow.cpp
src/utils/binarytools/: BinaryReader.cpp  BinaryReader.h
src/window/: Window.cpp  Window.h
src/window/gui/: GfxDebuggerWindow.cpp  Gui.cpp  StatsWindow.cpp
tools/: generate_keys_header.cpp
